bug on safari fix maybe?

--- a/homestyle.css
+++ b/homestyle.css
@@ -80,7 +80,7 @@
 
 /* transitions */
 
-.section_image, .section_images {
+.section_images {
     opacity: 0;
 }
 
